--- a/index.html
+++ b/index.html
@@ -4,9 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./asset/css/style.css">
-    <title>Document</title>
+    <title> Simple Portfolio Responsive web</title>
 </head>
 <body>
-    
+    <!-- start navbar -->
+     <nav class="navbar">
+        <div class="container">
+
+            <a href="#" class="logo">
+                <span class="logo-icon">❖</span>  Horizon
+            </a>
+
+            <ul class="nav-menu">
+                <li><a href="#" class="nav-link">Home</a></li>
+                <li><a href="#" class="nav-link">About</a></li>
+                <li><a href="#" class="nav-link">Service</a></li>
+                <li><a href="#" class="nav-link">Portfolio</a></li>
+                <li><a href="#" class="nav-link">Contact</a></li>
+
+            </ul>
+            <button class="hamburger">☰</button>
+
+        </div>
+     </nav>
 </body>
 </html>
