feat: added hero section

--- a/index.html
+++ b/index.html
@@ -27,5 +27,15 @@
 
         </div>
      </nav>
-</body>
+
+     <!-- end navbar -->
+      
+    <!-- start hero section -->
+     <section class="hero">
+        <div class="hero-content">
+            <h1>Welcome to Horizon</h1>
+            <p>We create beautiful, functional websites that help your business grow and thrive in the digital landscape.</p>
+            <a href="#" class="btn">Get Started</a>
+        </div>
+     </section>
 </html>
