feat: added cards features

--- a/index.html
+++ b/index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./asset/css/style.css">
     <title> Simple Portfolio Responsive web</title>
 </head>
+
 <body>
     <!-- start navbar -->
-     <nav class="navbar">
+    <nav class="navbar">
         <div class="container">
 
             <a href="#" class="logo">
-                <span class="logo-icon">❖</span>  Horizon
+                <span class="logo-icon">❖</span> Horizon
             </a>
 
             <ul class="nav-menu">
@@ -26,16 +28,83 @@
             <button class="hamburger">☰</button>
 
         </div>
-     </nav>
+    </nav>
 
-     <!-- end navbar -->
-      
+    <!-- end navbar -->
+
     <!-- start hero section -->
-     <section class="hero">
+    <section class="hero">
         <div class="hero-content">
             <h1>Welcome to Horizon</h1>
-            <p>We create beautiful, functional websites that help your business grow and thrive in the digital landscape.</p>
+            <p>We create beautiful, functional websites that help your business grow and thrive in the digital
+                landscape.</p>
             <a href="#" class="btn">Get Started</a>
         </div>
-     </section>
+    </section>
+
+    <!-- end hero section -->
+
+    <!-- start card section -->
+    <section class="card-section">
+        <div class="container">
+            <h2 class="section-title">Our Services</h2>
+            <div class="cards-grid">
+
+                <!-- fist card -->
+                <div class="card">
+                    <img src="./asset/imge/webDesign.jpg" class="card-img" alt="">
+
+                    <div class="card-content">
+                        <h2 class="card-title">Web Design</h2>
+                        <p class="card-text">Web Design
+                            We craft beautiful, responsive websites tailored to your brand's
+                            unique identity and your users' needs.</p>
+                    </div>
+
+                    <div class="card-footer">
+                        <span class="card-tag">Design</span>
+                        <a href="#" class="card-link">Learn More &#8594;</a>
+                    </div>
+
+                </div>
+
+                <!-- 2nd card -->
+                <div class="card">
+                    <img src="./asset/imge/app-development.avif" class="card-img" alt="">
+
+                    <div class="card-content">
+                        <h2 class="card-title">App Development</h2>
+                        <p> From concept to launch, we build mobile applications that engage users and drive business growth.</p>
+                    </div>
+
+                    <div class="card-footer">
+                        <span class="card-tag">Developement</span>
+                        <a href="#" class="card-link">Learn More &#8594;</a>
+                    </div>
+
+                </div>
+
+                <!-- 3rd card -->
+
+                <div class="card">
+                    <img src="./asset/imge/band.avif" class="card-img" alt="">
+
+                    <div class="card-content">
+                        <h2 class="card-title">Brand Strategy</h2>
+                        <p>We help you define your brand's voice, visual identity, and messaging to stand out in a crowded market.</p>
+                    </div>
+
+                    <div class="card-footer">
+                        <span class="card-tag">Marketing</span>
+                        <a href="#" class="card-link">Learn More &#8594;</a>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
+    </section>
+
+
+
 </html>
